<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
     android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="203dp"
            android:layout_height="35dp"
            android:layout_marginTop="48dp"
            android:background="@color/white"
            android:text="@string/view_package"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/personName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/pkgWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5" />


        <EditText
            android:id="@+id/personAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="2dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

        <EditText
            android:id="@+id/personPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4" />


        <EditText
            android:id="@+id/pkgW"
            android:layout_width="85dp"
            android:layout_height="39dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/W_width"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/pkgL"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:text="@string/view_name"
            android:textColor="#F44336"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="68dp"
            android:text="@string/view_Address"
            android:textColor="#F44336"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="55dp"
            android:text="@string/view_Pno"
            android:textColor="#F44336"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/view_weight"
            android:textColor="#F44336"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:onClick="saveUser"
            android:text="@string/ready_to_shipped"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/view_PD"
            android:textColor="#F44336"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pkgWeight" />

        <EditText
            android:id="@+id/pkgL"
            android:layout_width="85dp"
            android:layout_height="39dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/L_length"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/pkgH"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/pkgW"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="290dp"
            android:layout_height="145dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pkgL">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_1" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_2" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_3" />
        </RadioGroup>

        <EditText
            android:id="@+id/pkgH"
            android:layout_width="85dp"
            android:layout_height="39dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/H_height"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/pkgL"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


